Updated favicon changes

--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
     <meta name="description" content="A Vuejs Application for OIDC Flow"/>
+    <link rel="icon" href="<%= BASE_URL %>image/favicon.png" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;500&display=swap" rel="stylesheet">
-    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <title>Vue JS - OIDC Flow</title>
   </head>
   <body>
